changed my name

--- a/STAT331_Final_Project.html
+++ b/STAT331_Final_Project.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Justus Nunez, Matt Babb, Daniel Alvarez">
+<meta name="author" content="Justus Nunez, Matt Babb, Danny Alvarez">
 
 <title>STAT331_Final_Project</title>
 <style>
@@ -3034,7 +3034,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Justus Nunez, Matt Babb, Daniel Alvarez </p>
+             <p>Justus Nunez, Matt Babb, Danny Alvarez </p>
           </div>
   </div>
     
